examples/test/testpolicy11850.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11850
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key22: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value41
          key21: value20
      podSelector:
        matchLabels:
          key28: value21
          key7: value25
